# FerrisRes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  armor.toml  distilled_model.bin.loss_curve.csv  example_impl.rs  flake.nix  libfft.rlib
.cargo/: config.toml
.engram/agents/: benchmark-turboquant.yaml  flash-decode-subagent.yaml  impl-async-offload.yaml  impl-borrow-buf.yaml  impl-cpu-offload.yaml  impl-device-profile.yaml  impl-grad-ckpt.yaml  implementer-async-offload.yaml  implementer-gpubuf-fix.yaml  implementer-rope-fix.yaml  implementer-scenario.yaml  implementer-turboquant.yaml  moe-wiring-subagent.yaml  prefill-coder.yaml  researcher-cloud-gpu.yaml  researcher-grad-ckpt.yaml  researcher-hw-strategy.yaml  researcher-kv-cache.yaml  researcher-moe-routing.yaml  researcher-moe-wgsl.yaml  researcher-multigpu.yaml  researcher-npu.yaml  researcher-partial-bp.yaml  researcher-rdma.yaml  researcher-streaming.yaml  researcher-tile-grad.yaml  researcher-turboquant.yaml  streaming-researcher.yaml
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs  sparse_ternary_bench.rs  ternary_bench.rs  turboquant_benchmarks.rs
docs/: Brief.md  Team_Brief_Kimi_Attention_Residuals.md  TurboQuant_Engine_Specification.md  api-reference.md  architecture.md  deployment.md  distillation.md  quickstart.md  security.md
docs/architecture/: adr-backend-abstraction.md  block_moe_res_e2b.md
docs/research/: autonomous_learner_improvements.md
docs/tasks/: distillation-training-expansion.md
examples/: compute_example.rs  distill_e2b.sh
examples/k8s-webhook/: Cargo.toml
examples/nix/: flake-compliance.nix
notebooks/: ferrisres_distillation.ipynb
packaging/: build-deb.sh  nvidia_icd.x86_64.json
packaging/debian/: control
papers_research/: IMPLEMENTATION_REFERENCE.md  abstraction_concept_formation.md  activation_partitioning.md  audio_codec_research.md  bci_eeg_research.md  cluster_benchmarks.md  differentiable_execution.md  distributed_training_research.md  domain_specialization.md  edge_medtech_research.md  emergence_detection.md  emergent_autonomy.md  episodic_memory.md  erp_kafka_research.md  expert_count_tradeoff.md  extract.py  fault_tolerance_elastic.md  flashattn3_async_wgsl_research.md  formal_verification_research.md  fsdp_research.md  gguf_research.md  igaming_fraud_research.md  implicit_gemm_fused_patching_research.md  k8s_admission_webhook_research.md  k8s_audit_stream_research.md  lidar_pointcloud_research.md  matryoshka_embeddings_research.md  meta_learning_tool_usage.md  multimodal_research.md  ntm.html  optimizer_state_sharding.md  patch_to_cluster_attention_research.md  plan_reuse.md  planning_tool_chaining.md  safe_self_modification.md  safetensors_research.md  scada_modbus_research.md  self_bootstrapping.md  self_directed_learning.md  speculative_decoding_research.md  (+14 more)
papers_research/raw/: blt.md  decs.md  deepspeed_zero.md  kimi_k1_5.md  lora.md  megatron.md  paged_attention.md  qlora.md  rag.md  ring_attention.md  speculative_decoding.md  yarn.md
scripts/: check_attn_shapes.py  check_ffn.py  check_final_norm.py  check_lm_head.py  check_qk_norm.py  compare_2layers.py  compare_full.py  compare_layer0.py  decode_top.py  dump_norms.py  full_reference.py
src/: error.rs  lib.rs  main.rs
src/autodiff/: accumulator.rs  backward.rs  graph.rs  mod.rs
src/compute/: adapter.rs  async_pipeline.rs  buffer.rs  cache.rs  distributed.rs  hardware.rs  memory.rs  mod.rs  pipeline.rs  transport.rs  turboquant.rs
src/device/: capability.rs  dispatch.rs  mod.rs  profile.rs
src/inference/: abstraction_engine.rs  acp.rs  adaptive_blocks.rs  aiops.rs  bci.rs  block_draft.rs  buddy_moe.rs  circular_kv.rs  cognitive_pipeline.rs  covo.rs  (+66 more)
tests/: integration_test.rs  kernel_tests.rs  property_tests.rs  scenario_test.rs
(+87 files in other folders)
