[package]
name = "ferrisres"
version = "0.1.0"
edition = "2021"
description = "Block AttnRes runtime for distributed SLM/LLM training and inference"
license = "MIT OR Apache-2.0"
authors = ["FerrisRes Team"]
repository = "https://github.com/ferrisres/ferrisres"
rust-version = "1.75"

[dependencies]
wgpu = "29"
naga = "29"
bytemuck = "1.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
ash = "0.38"
sysinfo = "0.33"

[dev-dependencies]
assert_matches = "1"

[features]
default = ["vulkan"]
vulkan = ["wgpu/vulkan"]
metal = ["wgpu/metal"]
dx12 = ["wgpu/dx12"]
webgpu = ["wgpu/webgpu"]

[build-dependencies]
naga = "29"

[[example]]
name = "compute_example"
path = "examples/compute_example.rs"

[[bin]]
name = "ferrisres"
path = "src/main.rs"
