[package]
name = "ferrisres"
version = "0.2.3"
edition = "2021"
description = "Block AttnRes runtime for distributed SLM/LLM training and inference"
license = "AGPL-3.0-or-later"
authors = ["FerrisRes Team"]
repository = "https://github.com/shift/FerrisRes"
rust-version = "1.75"

[dependencies]
wgpu = "29"
naga = "29"
bytemuck = "1.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmi = "0.40"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
ash = "0.38"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
image = "0.25"
rand = "0.8"
pollster = "0.3"
memmap2 = "0.9"
ureq = { version = "2", features = ["json"] }
matrixmultiply = "0.3"
regex = "1"
tokenizers = "0.21"

[dev-dependencies]
assert_matches = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"

[features]
default = ["vulkan"]
vulkan = ["wgpu/vulkan"]
metal = ["wgpu/metal"]
dx12 = ["wgpu/dx12"]
webgpu = ["wgpu/webgpu"]
integrated_gpu_profile = []
high_end_profile = []

[build-dependencies]
naga = "29"

[[example]]
name = "compute_example"
path = "examples/compute_example.rs"

[[example]]
name = "example_impl"
path = "examples/example_impl.rs"

[[bin]]
name = "ferrisres"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "turboquant_benchmarks"
harness = false
path = "benches/turboquant_benchmarks.rs"

[[bench]]
name = "sparse_ternary_bench"
harness = false
path = "benches/sparse_ternary_bench.rs"

[[bench]]
name = "ternary_bench"
harness = false
path = "benches/ternary_bench.rs"
